ssiCalculator.css
#appContainer {
	position:absolute;
	margin-left:10%;
	width:80%;
}
#appCore {
	overflow: hidden;
}
#appMain {
	font-size:4vmax;
	line-height:1.4;
}
#appOptions {
	font-size:2.2vmax;
	color:#626D71;
	margin-top:8%;
}
#appOutput {
	font-size:4vmax;
	line-height:1.4;
	text-align:center;
}
.calendarButton {
	font-size:1.8vmax;
	border-radius:70%;
	background-color: #FFFFFF;
	box-shadow: 0 3px 3px #999;
	margin-left: 10px;
	margin-right: 10px;
}
.calendarButton:active {
	box-shadow:0 1px 3px #666;
	transform: translateY(2px);
}
#calendarContainer {
	position:absolute;
	width:80%;
	margin-left: 10%;
	margin-top: 3%;
}
#calendarControls {
	display:flex;
	align-items:center;
	justify-content:center;
}
.calendarGrid {
	display: grid;
	grid-template-columns: repeat(7, 1fr);
	margin-top: 20px;
	grid-gap: 1px;
}
.calendarGrid > div {
	text-align:center;
	line-height:300%;
	border: 1px #9ba9c1 solid;
}
.calendarGrid > div:hover, div:focus {
    cursor: pointer;
}
.calendarGrid > div.calendarEmptySquare {
	border: 0;
}
.calendarGrid .header {
	background-color:#cbdbf4;
}
#calendarKey {
	margin-top:2%;
	border: 1px #9ba9c1 solid;
	padding-left: 5%;
}
.cDeskHalfHoliday {
	background-image:
	linear-gradient(
		to bottom,
		transparent,
		transparent 10%,
		#56186d 10%,
		#56186d 18%,
		transparent 18%
	);
}
.cDeskHoliday {
	background-image:
	linear-gradient(
		to bottom,
		transparent,
		transparent 10%,
		#56186d 10%,
		#56186d 18%,
		transparent 18%,
		transparent 82%,
		#56186d 82%,
		#56186d 90%,
		transparent 90%
	);
}
.clickable {
	cursor:pointer;
	color:#1995AD;
}
.clickable:hover {
	text-decoration:underline;
}
.fadeIn {
	animation-name: fade;
	animation-duration: 1s;
	animation-direction:reverse;
	animation-fill-mode: backwards;
}
.fadeOut {
	animation-name: fade;
	animation-duration: 1s;
	animation-direction: normal;
	animation-fill-mode: forwards;
}
.hidden {
	display: none;
}
.keyButton {
	position: absolute;
	margin-left: 90%;
	font-size:1.8vmax;
	border-radius:70%;
	background-color: #FFFFFF;
	box-shadow: 0 3px 3px #999;
}
.keyButton:active {
	box-shadow:0 1px 3px #666;
	transform: translateY(2px);
}
@keyframes fade {
	from {opacity: 1;}
	to {opacity: 0;}
}
.keyLine {
	display:flex;
}
.keySquare {
	width: 1.5em;
	height: 1.5em;
	border: 1px #9ba9c1 solid;
	margin-top: 0.75em;
}
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
.modal-close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}
.modal-close:hover, .modalclose:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}
.modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 5px solid #47618c;
    width: 80%; /* Could be more or less, depending on screen size */
}
.modalOpenButton {
	text-decoration:none;
	color: #47618c;
}
.modalOpenButton:hover, .modalOpenButton:focus {
	text-decoration:underline;
}
.modalTitle {
	font-size: 120%;
	font-weight:bold;
}
#numLayingDays {
	font-family:Helvetica;
	font-size:4vmax;
	width:5vmax;
	border:none;
	background-color:#F5F5F5;
	color:#1995AD;
}
#numLayingDays:hover {
	text-decoration:underline;
}
.recessDay {
	background-image:
	linear-gradient(
		to bottom,
		transparent,
		transparent 18%,
		#8c551a 18%,
		#8c551a 26%,
		transparent 26%,
		transparent 74%,
		#8c551a 74%,
		#8c551a 82%,
		transparent 82%,
		transparent 90%
	);
}
.recessDay.cDeskHoliday {
	background-image:
	linear-gradient(
		to bottom,
		transparent,
		transparent 10%,
		#56186d 10%,
		#56186d 18%,
		#8c551a 18%,
		#8c551a 26%,
		transparent 26%,
		transparent 74%,
		#8c551a 74%,
		#8c551a 82%,
		#56186d 82%,
		#56186d 90%,
		transparent 90%
	);
}
.recessDay.cDeskHalfHoliday {
	background-image:
	linear-gradient(
		to bottom,
		transparent,
		transparent 10%,
		#56186d 10%,
		#56186d 18%,
		#8c551a 18%,
		#8c551a 26%,
		transparent 26%,
		transparent 74%,
		#8c551a 74%,
		#8c551a 82%,
		transparent 82%
	);
}
select {
	font-size:2vmax;
	font-family:Helvetica;
	text-align:center;
	background-color:#FFFFFF;
	color:#192231;
}

